# breezy-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  PKGBUILD.kwin  PKGBUILD.kwin.README.md  README.md  VERSION  default.nix  flake.nix  gnome-44-max.patch  shell.nix
.github/: FUNDING.yml
.github/workflows/: release.yml
box/ui/: breezyboxruntimeenvironment.py
cmake/: FindGLEW.cmake  FindGLib.cmake  FindGStreamer.cmake
desktop/: Pipfile  remote_desktop.py  screen-cast.py  vulkan_render.py  vulkan_tools.py
desktop/shaders/: hello_triangle.frag  hello_triangle.vert
doc/: steam-deck-desktop-mode.md
docker-build/: Dockerfile  init.sh  run-build.sh
gnome/breezydesktop@org.xronlinux/: IMUAdjust.frag  cursor.js  cursormanager.js  extension.js  ipc.js  logger.js  metadata.json  monitormanager.js  time.js  xrEffect.js
gnome/breezydesktop@org.xronlinux/dbus-interfaces/: org.gnome.Mutter.DisplayConfig.xml
gnome/breezydesktop@org.xronlinux/schemas/: com.xronlinux.BreezyDesktop.gschema.xml  gschemas.compiled  org.gnome.shell.extensions.breezy-desktop.gschema.xml
gnome/breezydesktop@xronlinux.com/: extension.js  math.js
gnome/src/: IMUAdjust.frag  Sombrero.frag  cursor.js  cursormanager.js  customeffect.js  devicedatastream.js  extension.js  globals.js  importadapter.js  ipc.js  logger.js  math.js  metadata.json  monitormanager.js  overlay.js  shader.js  systembackground.js  testactor.js  time.js  virtualdisplayeffect.js  virtualdisplaysactor.js  virtualmonitorsactor.js  xrEffect.js
gnome/src/schemas/: com.xronlinux.BreezyDesktop.gschema.xml
gnome/ui/: breezygnomeruntimeenvironment.py  updatechecker.py  verify.py  virtualdisplay.py  virtualdisplaymanager.py
kwin/: .clang-format  CMakeLists.txt  README.md  TRANSLATING.md
kwin/cmake/: info.cmake  pack.cmake
kwin/data/: screenshot.avif
kwin/docker-build/: Dockerfile  Dockerfile.steamos  Dockerfile.steamos-3.7  Dockerfile.steamos-3.8  Dockerfile.steamos-3.9  init.sh  run-build.sh
kwin/po/: LINGUAS  breezy_desktop_kwin.pot
kwin/po/de/: breezy_desktop_kwin.po
kwin/po/es/: breezy_desktop_kwin.po
kwin/po/fr/: breezy_desktop_kwin.po
kwin/po/it/: breezy_desktop_kwin.po
kwin/po/ja/: breezy_desktop_kwin.po
kwin/po/pl/: breezy_desktop_kwin.po
kwin/po/pt_BR/: breezy_desktop_kwin.po
kwin/po/ru/: breezy_desktop_kwin.po
kwin/po/sv/: breezy_desktop_kwin.po
kwin/po/uk_UA/: breezy_desktop_kwin.po
kwin/po/zh_CN/: breezy_desktop_kwin.po
kwin/src/: CMakeLists.txt  Messages.sh  breezydesktopconfig.kcfg  breezydesktopconfig.kcfgc  breezydesktopeffect.cpp  breezydesktopeffect.h  cubeconfig.kcfg  cubeconfig.kcfgc  cubeeffect.cpp  cubeeffect.h  kwaylandclient.cpp  kwaylandclient.h  main.cpp  metadata.json  screencasting.cpp  screencasting.h
kwin/src/kcm/: CMakeLists.txt  breezy_desktop.desktop.in  breezydesktopeffectkcm.cpp  breezydesktopeffectkcm.h  breezydesktopeffectkcm.ui  cubeeffectkcm.cpp  cubeeffectkcm.h  cubeeffectkcm.ui  customresolutiondialog.cpp  customresolutiondialog.h  customresolutiondialog.ui  kcm_metadata.json  labeledslider.cpp  labeledslider.h  resources.qrc  shortcuts.h  virtualdisplayrow.cpp  virtualdisplayrow.h  virtualdisplayrow.ui
kwin/src/package/: metadata.json
kwin/src/package/contents/ui/: BreezyDesktop.qml  main.qml
kwin/src/qml/: BreezyDesktop.qml  BreezyDesktopDisplay.qml  CameraController.qml  Cube.qml  CubeCameraController.qml  CubeFace.qml  CurvableDisplayMesh.qml  DesktopView.qml  Displays.qml  SingleDesktopView.qml  cursorOverlay.frag  cursorOverlay.vert  main.qml
kwin/src/xrdriveripc/: CMakeLists.txt  xrdriveripc.cpp  xrdriveripc.h  xrdriveripc_runner.py
shared/js/: displayPlacement.js  math.js
src/: main.cpp
ui/: BreezyDesktop.py  BreezyGNOME.py  Pipfile  README.md  ShortcutDialog.py  XRDriverIPC.py  breezy-desktop.ui  com.xronlinux.BreezyDesktop.json  meson.build  python3-pydbus.json  python3-requests.json  shortcut-dialog.ui
ui/build-aux/: start-breezy-desktop.sh
ui/data/: com.xronlinux.BreezyDesktop.desktop.in  com.xronlinux.BreezyDesktop.gschema.xml  com.xronlinux.BreezyDesktop.metainfo.xml.in  meson.build
ui/data/icons/: meson.build
ui/docker-build/: Dockerfile  init.sh  run-build.sh
ui/po/: LINGUAS  POTFILES  breezy_desktop.pot  breezydesktop.pot  de.po  es.po  fr.po  it.po  ja.po  meson.build  pl.po  pt_BR.po  ru.po  sv.po  uk_UA.po  zh_CN.po
ui/po/de/LC_MESSAGES/: breezydesktop.mo
ui/po/es/LC_MESSAGES/: breezydesktop.mo
ui/po/fr/LC_MESSAGES/: breezydesktop.mo
ui/po/it/LC_MESSAGES/: breezydesktop.mo
ui/po/ja/LC_MESSAGES/: breezydesktop.mo
ui/po/pl/LC_MESSAGES/: breezydesktop.mo
ui/po/pt_BR/LC_MESSAGES/: breezydesktop.mo
ui/po/ru/LC_MESSAGES/: breezydesktop.mo
ui/po/sv/LC_MESSAGES/: breezydesktop.mo
ui/po/uk_UA/LC_MESSAGES/: breezydesktop.mo
ui/po/zh_CN/LC_MESSAGES/: breezydesktop.mo
ui/src/: SettingsManager.py  StateManager.py  XRDriverIPC.py  breezydesktop.gresource.xml  breezydesktop.in  configmanager.py  connecteddevice.py  connecteddevice.ui  customresolutiondialog.py  customresolutiondialogcontent.py  displaydistancedialog.py  displaydistancedialogcontent.py  extensionsmanager.py  failedverification.py  files.py  license.py  licensedialog.py  licensedialogcontent.py  licensefeaturerow.py  licensetierrow.py  main.py  meson.build  nodevice.py  nodriver.py  noextension.py  nolicense.py  runtime.py  runtimeenvironment.py  settingsmanager.py  shortcutdialog.py  statemanager.py  time.py  updatechecker.py  verify.py  virtualdisplay.in  virtualdisplay.py  virtualdisplaymanager.py  virtualdisplayrow.py  window.py  window.ui  (+1 more)
ui/src/gtk/: connected-device.ui  custom-resolution-dialog-content.ui  custom-resolution-dialog.ui  display-distance-dialog-content.ui  display-distance-dialog.ui  failed-verification.ui  license-dialog-content.ui  license-dialog.ui  license-feature-row.ui  license-tier-row.ui  no-device.ui  no-driver.ui  no-extension.ui  no-license.ui  shortcut-dialog.ui  virtual-display-row.ui  window.ui
ui/src/runtimes/: __init__.py
vulkan/: custom_banner_config.yml
vulkan/config/: vkBasalt.conf
(+11 files in other folders)
